Replaced usages of Paths.get